tests/toylang/pos/000056_cdrc2.toylang
program a = { if(a) then if a then sleep; } .
