tests/toylang/neg/000798_mutation.toylang
program a = { a = then(a); } .
